# AINS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DIAGRAMS.md  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  traces.db
data/: data.md
deploy/: DIAGRAM.md  README.md
deploy/chaos/: README.md  pod-kill.sh  steady-state.sh
deploy/chaos/chaosmesh/: cpu-stress.yaml  network-delay.yaml  pod-kill.yaml
deploy/docker/: dashboard.Dockerfile  python.Dockerfile
deploy/helm/sentinel/: Chart.yaml  values.yaml
deploy/helm/sentinel/templates/: _helpers.tpl  backends.yaml  config.yaml  dashboard.yaml  keda.yaml  servicemonitor.yaml  services.yaml
deploy/k8s/: atlassian-remote.yaml  configmap.example.yaml  dashboard.yaml  eval-engine.yaml  flight-recorder.yaml  gen-config.sh  kustomization.yaml  minio.yaml  secret.example.yaml  xqdrant.yaml
deploy/k8s/keda/: scaledobject-eval-engine.yaml
deploy/k8s/load/: load-generator.yaml
deploy/k8s/load/k6/: README.md  k6-job.yaml  script.js
deploy/observability/: README.md  grafana-dashboard-sentinel.yaml  kube-prometheus-stack.values.yaml  servicemonitor.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE.preview.md  ARCHITECTURE_DIAGRAM.md  BATTLE_PLAN.md  BATTLE_PLAN.preview.md  README.md  README.preview.md  TECHNICAL_SPECS.md  TECHNICAL_SPECS.preview.md  eval_report.md  eval_report.preview.md  how_it_works.md  scalability_reliability.md  security_audit.md  spec_response.md  test_report.md  uc3.md  validation_guide.md
docs/concept/: concept.tex
docs/demo/: demo-script.md
docs/evaluation-report/: evaluation-report.tex
docs/explainability/: explainability-layer.tex
infra/: DIAGRAM.md  README.md
infra/azure/: README.md  setup.sh
infra/cloudflare/: README.md  d1-schema.sql  wrangler.toml
interpretability/: .gitignore  README.md  build_map.py  concepts.json  explore.ipynb  model_utils.py  pyproject.toml  samples.json  step1_vocabulary.py  step2_segmentation.py  step3_geometry.py  step4_perturbation.py  step5_attribution.py
scripts/: README.md  check_docs.py  make_bisect_pair.py  run_synthetic_eval.py  sample_incidents.csv  seed_atlassian.py  seed_custom_incidents.py  seed_xqdrant.py
services/: services.md
services/uc3/: requirements.txt  traces.db
services/uc3/src/: test_groq.py  traces.db
services/uc3/src/agents/: publishing_agent.py  retrieval_agent.py
services/uc3/src/ai-automation/: manifest.yml
services/uc3/src/ai-automation/static/hello-world/: package.json
services/uc3/src/api/: orchestrator.py  routes.py
services/uc3/src/atlassian/: confluence_client.py  jira_client.py
services/uc3/src/data/: test_tickets.csv
spec/: README.md  mcp-audit-trail-proposal.md  otel-genai-replay-extension.md
src/: models.py
src/agents/: reasoning_agent.py
src/ai-automation/: package-lock.json  package.json
src/api/: orchestrator.py
src/atlassian/: confluence_client.py  jira_client.py
src/data/: test_tickets.csv
src/evaluation/: report_uc3.md  run_eval.py
tests/: README.md
tests/e2e/: README.md
