# pyproject.toml — Sentinel monorepo root (uv workspace)
# This is a virtual workspace root: it is NOT itself a installable package.
# It exists to (a) define the uv workspace members and (b) hold the shared
# tooling configuration (pytest, mypy, ruff, black, isort) for all packages.
#
# `make setup` runs `uv sync --all-packages`, which installs every workspace
# member (currently just trace-core) in editable mode into a single .venv.

[project]
name = "sentinel"
version = "0.0.0"
description = "Sentinel — AI Agent Reliability Platform (monorepo workspace root)."
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false  # the root is a virtual workspace, never built or published

[tool.uv.workspace]
# Add other packages here as they gain a pyproject.toml (dashboard is TS-only).
members = [
    "packages/trace-core",
    "packages/flight-recorder",
    "packages/eval-engine",
    "packages/atlassian-remote",
]

[tool.uv.sources]
trace-core = { workspace = true }
flight-recorder = { workspace = true }
eval-engine = { workspace = true }
atlassian-remote = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",        # `make test-uc1`/`test-uc2` run pytest with --cov
    "pytest-httpx>=0.30",     # mock every HTTP call in flight-recorder tests
    "pytest-asyncio>=0.23",   # eval-engine graders are async (cf_ai_client)
    "mypy>=1.11",
    "ruff>=0.6",
    "black>=24.0",
    "isort>=5.13",
]

# ─── Shared tooling config ─────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
addopts = "--tb=short"
# eval-engine grader tests are async; run them without a per-test marker.
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
# src-layout packages live at packages/<pkg>/src/<pkg>. explicit_package_bases +
# mypy_path make mypy map packages/trace-core/src/trace_core/x.py to the module
# `trace_core.x` — the same name the editable install exposes — so a file checked
# by path and resolved by import is not reported twice.
namespace_packages = true
explicit_package_bases = true
# Each src-layout package's src dir is on the path so files checked by path map to
# the same module name the editable install exposes (no duplicate-module errors).
mypy_path = [
    "packages/trace-core/src",
    "packages/flight-recorder/src",
    "packages/eval-engine/src",
    "packages/atlassian-remote/src",
]
# opentelemetry ships partial type info; the Makefile also passes
# --ignore-missing-imports for the cross-package run.
warn_unused_ignores = true
disallow_untyped_defs = true

# boto3/botocore and uvicorn ship no type information; ignore their missing stubs
# so a package-scoped `mypy` run (without --ignore-missing-imports) stays clean.
# qdrant_client (atlassian-remote) is added here too as a safety net in case a
# pinned build ships incomplete type info.
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "uvicorn.*", "mypy_boto3_s3.*", "qdrant_client.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
